usr/local/www/themes/pfsense/all.css
/* ... */
#login p#text {
	font-size: 1em;
	font-weight: normal;
	padding: 3px;
	margin: 0em;
/*	text-indent: 10px;
	position: relative;
	top: -300px; */
}

#login #username, #password {
	font-size: 1em;
	width: 60%;
	padding: 3px;
	margin: 0em;

	
/*	text-indent: 10px;
	position: relative;
  left: 10px;
	top: -300px; */
}

#login #submit {
	font-size: 1em;
	font-weight: bold;
	text-align: center;
	padding: 3px;
	margin: 0em;
/*	text-indent: 10px; */
	position: relative;
	top: -20px;
	left: 120px;
}

/* loginerror box follows */

#login #inputerrors {
	background-color: transparent;
  border: 0px solid #666666;
  margin: 5em auto;
  vertical-align: middle;
  padding: 0em;
  width: 300px;
  height: 50px;
  position: relative;
  left:  0px;
  top: -117px;
}

/* Sortable tables */
table.sortable thead {
    cursor: default;
	background-color: #EEEEEE;
	padding-right: 12px;
	padding-left: 12px;
	padding-top: 12px;
	padding-bottom: 12px;
}

#graph {
	position: relative;
	z-index: 1;
}

